[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Tower/VillageTowerCannon.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Towers/BuffTower.png" type="Texture" id=2]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Village Tower" type="Node2D"]
script = ExtResource( 1 )

[node name="Buffed Towers Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buffed Towers Area"]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Weakened Enemies Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weakened Enemies Area"]

[node name="Tower Base Area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 56

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower Base Area"]

[connection signal="area_entered" from="Buffed Towers Area" to="." method="_on_Buffed_Towers_Area_area_entered"]
[connection signal="area_exited" from="Buffed Towers Area" to="." method="_on_Buffed_Towers_Area_area_exited"]
[connection signal="area_entered" from="Weakened Enemies Area" to="." method="_on_Weakened_Enemies_Area_area_entered"]
[connection signal="area_exited" from="Weakened Enemies Area" to="." method="_on_Weakened_Enemies_Area_area_exited"]
